
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 MAR 30a
  * in model/share/fluid_share.c
    - in condition_Lambda_plus_minus_Parent(), implemented new eigenvalue conditioning (function of 
      zetaA2) that blends the Steger-Warming eigenvalues with those of the positivity-preserving 
      filter such that the resulting eigenvalues remain within the 1/zetaA2 of the spectral radius 
      (works much better than previous approach of simply clipping the wave speeds for shocks of 
      infinite strength)
     

2019 MAR 29a
  * in cycle/share/ts_share.c
    - in add_dSstar_dUstar_to_TDMA(), removed the code that prevented dStardUstar[row][row] 
      from being positive
    - deleted add_dSstar_dUstar_to_TDMA_test()
  * in model/fluid/*/fluid_source.c and model/fluid/_drift-diffusion/fluid.c
    - in find_dSstar_dUstar(), added code that prevents dStardUstar[row][row] 
      from being positive


2019 MAR 28a
  * in tools/average.sh
    - added error handling of files with different number of columns and rows (Prasanna T.R.)
  * in bin
    - added heatbdry2D.wrp
   

2019 MAR 26b
  * in bin
    - added reentry_cube_sheath.wrp
    - modified reentry_sheath.wrp
  * in lib/soap/doc/report.tex
    - fixed typo "for\_parallel" in verbatim should be "for_parallel" 
  * in src/control.c
    - in longstr_t bib, fixed a spelling mistake in one of the citations
 

2019 MAR 26a
  * in model/emfield/_Ohm/emfield.c
    - deleted  _Qjoulek_interface()
    - added _Nk_max()
    - in find_Vk_from_mu(), now calls _Nk_max()
  * in model/emfield/_Ohm_generalized/emfield.c
    - renamed _Qjoulek to _Qjoulek_old
    - recoded _Qjoulek() 
    - added _Nk_max()
    - in find_Vk_from_mu(), now calls _Nk_max() instead of _Nk_smoothed()