@@ -7,6 +7,13 @@ CFDWARP CHANGELOG
 _____________________________________________________________________________________________________
 
 
+2019 MAR 31a
+  * in model/share/fluid_share.c
+    - in condition_Lambda_plus_minus_Parent(), made an alteration to the Steger-Warming blending: 
+      now, does not include the charged species mass conservation equations solved with the 
+      drift-diffusion model in finding factcommon
+ 
+
 2019 MAR 30a
   * in model/share/fluid_share.c
     - in condition_Lambda_plus_minus_Parent(), implemented new eigenvalue conditioning (function of 
